adjust the nav button size during xs screen size - fix responsive layout issue

--- a/site/lec29/css/styles.css
+++ b/site/lec29/css/styles.css
@@ -197,9 +197,6 @@ body{
         /* 1vw = 1% of viewport/screensize width */
         font-size: 5vw;
     }
-    .second-brand{
-        margin-top: 5%;
-    }
     /* kosher certificate */
     .navbar-brand p{
         /* 0.6 = 60% of the default font size */
@@ -208,5 +205,14 @@ body{
     }
     .navbar-brand p img{
         height: 15px;
+    }
+    .second-brand{
+        margin-top: 5%;
+    }
+    #header-nav button.navbar-toggler .navbar-toggler-icon{
+        /* #header-nav .navbar-toggler-icon */
+        width: 0.9em;
+        height: 0.9em;
+        background-size: 120%;
     }
 }
